# django-app-skillbox

./: .gitignore
prod/mysite/: .dockerignore  .env.example  Dockerfile  devices.csv  docker-compose.yaml  log.txt  log.txt.1  log.txt.2  log.txt.3  nginx.conf  pyproject.toml  requirements.txt  shopapp-fixtures.json
prod/mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
prod/mysite/blogapp/management/commands/: create_article.py
prod/mysite/blogapp/migrations/: 0001_initial.py  0002_alter_article_pub_date.py  0003_alter_article_content.py  0004_alter_article_pub_date.py
prod/mysite/logs/: log-django-app.txt
prod/mysite/myauth/: forms.py  models.py  urls.py  utils.py  views.py
prod/mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
prod/mysite/mysite/: settings.py  sitemaps.py  urls.py
prod/mysite/shopapp/: admin.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  utils.py  validators.py  views.py
prod/mysite/shopapp/fixtures/: auth-group-fixture.json  orders-fixture.json  products-fixture.json  user-auth-group-fixture.json  user-fixture.json
prod/mysite/shopapp/migrations/: 0007_alter_product_options.py  0008_alter_product_discount_alter_product_name_and_more.py  0009_product_created_by_alter_product_discount.py  0010_alter_product_created_by.py  0011_order_receipt.py  0012_product_preview.py  0013_productimage.py  0014_alter_productimage_image.py  0015_alter_order_options_alter_product_options_and_more.py  0016_alter_order_user.py
prod/mysite/static/: style.css
prod/mysite/templates/: base.html
(+39 files in other folders)
